[workspace]
resolver = "2"
members = [
    "crates/dx_runtime",
    "crates/msk144plus_packjt",
    "crates/msk144plus_fec",
    "crates/msk144plus_dsp",
    "crates/msk144plus_engine",
    "crates/msk144plus_cli",
    "crates/msk144plus_gui",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
authors = ["Roger Banks GW4WND"]
license = "GPL-3.0-or-later"

[workspace.dependencies]
hound = "3.5"
log = "0.4"
env_logger = "0.10"
rustfft = "6.2"
num-complex = "0.4"
clap = { version = "=4.4.18", features = ["derive"] }
msk144plus_packjt = { path = "crates/msk144plus_packjt" }
msk144plus_fec    = { path = "crates/msk144plus_fec" }
msk144plus_dsp    = { path = "crates/msk144plus_dsp" }
msk144plus_engine = { path = "crates/msk144plus_engine" }

[profile.release]
opt-level = 3
debug = true
